Rename package for VCS

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "floodx92/nova-media-hub",
+  "name": "outl1ne/nova-media-hub",
   "description": "A Laravel Nova tool for managing media.",
   "keywords": [
     "laravel",
